fix: Added device form

--- a/src/app/pages/patients/add/add.component.html
+++ b/src/app/pages/patients/add/add.component.html
@@ -340,8 +340,8 @@
                         </div> 
                   </nb-tab>
                   <nb-tab tabTitle="{{'kDevices' | translate}}">
-                    <button nbButton status="primary" (click)="open(dialog)">Add</button>
-                    <ng-template #dialog>
+                    <button nbButton status="primary" (click)="open(devicedialog)">Add</button>
+                    <ng-template #devicedialog>
                         <nb-card class="dialog-card">
                             <nb-card-header>
                                 <h6 class="text-center">Add Devices</h6>
@@ -349,10 +349,10 @@
                             <nb-card-body>
                                 <app-devices></app-devices>
                             </nb-card-body>
-                            <!-- <nb-card-footer>
+                            <nb-card-footer>
                                 <button nbButton status="danger" class="mx-3" (click)="refclose()">{{'kCancel' | translate}}</button>
                                 <button nbButton status="primary" class="mx-4">{{'kSave' | translate}}</button>
-                            </nb-card-footer> -->
+                            </nb-card-footer>
                         </nb-card>
                     </ng-template>
                       </nb-tab>
