--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="deviceForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="deviceForm" (ngSubmit)="submit()">
     <div class="row">
         <div class="col-md-12">
             <div class="form-group mb-1">
