--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="deviceForm" (ngSubmit)="submit()">
+<form [formGroup]="deviceForm" >
     <div class="row">
         <div class="col-md-12">
             <div class="form-group mb-1">
@@ -19,15 +19,14 @@
             </div>
         </div>
     </div>
-        <div class="row">
-            <div class="col-md-12">
+    <div class="row">
+        <div class="col-md-12">
                 <div class="form-group mb-1">
                     <label for="serialNumber" class="label"> <span class="text-danger">*</span> 
                         Serial Number</label>
                     <input type="text" fieldSize="medium" formControlName="serialNumber" nbInput fullWidth
                         id="serialNumber" placeholder="serialNumber">
                 </div>
-            </div>
-
+        </div>
     </div>
 </form>
