feat: Added devices list

--- a/src/app/shared/components/devices/devices.component.html
+++ b/src/app/shared/components/devices/devices.component.html
@@ -1,4 +1,11 @@
-<form [formGroup]="deviceForm" >
+<button nbButton status="primary" class="float-end" (click)="open(devicedialog)">Add</button>
+<ng-template #devicedialog>
+    <nb-card class="dialog-card">
+        <nb-card-header>
+            <h6 class="text-center">Add Devices</h6>
+        </nb-card-header>
+    <nb-card-body>
+        <form [formGroup]="deviceForm" >
     <div class="row">
         <div class="col-md-12">
             <div class="form-group mb-1">
@@ -29,4 +36,38 @@
                 </div>
         </div>
     </div>
+    <div class="row">
+    <button nbButton status="danger" class="w-25 mx-5 my-3 " (click)="refclose()">{{'kCancel' | translate}}</button>
+            <button nbButton status="primary" class="w-25 my-3" (click)="saveForm()">{{'kSave' | translate}}</button>
+        </div>
 </form>
+</nb-card-body>
+            
+    </nb-card>
+</ng-template>
+
+<table class="w-50" [nbTreeGrid]="dataSource">
+
+    <tr nbTreeGridHeaderRow *nbTreeGridHeaderRowDef="defaultColumns"></tr>
+    <tr nbTreeGridRow *nbTreeGridRowDef="let row; columns: defaultColumns"></tr>
+
+    <!-- <ng-container [nbTreeGridColumnDef]="customColumn"> 
+   <th nbTreeGridHeaderCell  *nbTreeGridHeaderCellDef>
+        {{customColumn}}
+      </th> 
+     <td nbTreeGridCell *nbTreeGridCellDef="let row">
+        {{row.data[customColumn]}}
+      </td>
+    </ng-container>  -->
+
+    <ng-container *ngFor="let column of defaultColumns; let index = index"
+                  [nbTreeGridColumnDef]="column"
+                 >
+      <th nbTreeGridHeaderCell *nbTreeGridHeaderCellDef>
+        {{column}}
+      </th>
+      <td nbTreeGridCell *nbTreeGridCellDef="let row">{{row.data[column] || '-'}}</td>
+    </ng-container>
+
+  </table>
+
